# Agent-02

./: .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .oxfmtrc.jsonc  AGENTS.md  Dockerfile  README.md  README.vi.md  README_vi.md  SECURITY.md  agent02  agent02.bat  docker-compose.yml  go.mod  install.local.bat.example  install.sh  log.txt  log_utf8.txt  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  reflog.txt  reflog_utf8.txt  requirements.txt  run.bat  run.local.bat.example  stop.bat  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  (+1 more)
audit/: upstream-parity.openclaw-v2026.3.12.json  upstream-parity.openclaw-v2026.3.12.md
data/: agent02.db
docs/: BLUEPRINT_EN.md  BLUEPRINT_VI.md  QUICKSTART_en.md  QUICKSTART_vi.md  TODO_RUNTIME_DIFF.md  TUTORIAL_EN.md  TUTORIAL_VI.md  docs.json  index.md
git-hooks/: pre-commit
install-openclaw/: SKILL.md
llama-knowledge/: SKILL.md
scripts/: agent02-launcher.mjs  agent02-stop.mjs  audit-upstream-parity.mjs  bundle-a2ui.mjs  check-cleanup-surface.mjs  check-docs-parity.mjs  configure-git-hooks.mjs  format-docs.mjs  install-openclaw.ps1  run-node.mjs  tsdown-build.mjs  ui.js
skills/: README.md  SKILLS_TODO.md
src/: config.ts  constants.ts  db.ts  index.ts  paths.ts
test/: security-utils.test.ts  stream-parser.test.ts
tools/: README.md  TOOLS_TODO.md
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
workspace/: AGENT.md  IDENTITY.md  SOUL.md  USER.md
(+192 files in other folders)
